// Code generated by protoc-gen-go. DO NOT EDIT.
// source: domain/message.proto

package domain

import (
	fmt "fmt"
	proto "github.com/golang/protobuf/proto"
	_ "github.com/mwitkow/go-proto-validators"
	math "math"
)

// Reference imports to suppress errors if they are not otherwise used.
var _ = proto.Marshal
var _ = fmt.Errorf
var _ = math.Inf

// This is a compile-time assertion to ensure that this generated file
// is compatible with the proto package it is being compiled against.
// A compilation error at this line likely means your copy of the
// proto package needs to be updated.
const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package

// Duration is ValueObject
type Duration struct {
	Millis               int32    `protobuf:"varint,1,opt,name=millis,proto3" json:"millis,omitempty"`
	XXX_NoUnkeyedLiteral struct{} `json:"-"`
	XXX_unrecognized     []byte   `json:"-"`
	XXX_sizecache        int32    `json:"-"`
}

func (m *Duration) Reset()         { *m = Duration{} }
func (m *Duration) String() string { return proto.CompactTextString(m) }
func (*Duration) ProtoMessage()    {}
func (*Duration) Descriptor() ([]byte, []int) {
	return fileDescriptor_2069d9285dea32c5, []int{0}
}

func (m *Duration) XXX_Unmarshal(b []byte) error {
	return xxx_messageInfo_Duration.Unmarshal(m, b)
}
func (m *Duration) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
	return xxx_messageInfo_Duration.Marshal(b, m, deterministic)
}
func (m *Duration) XXX_Merge(src proto.Message) {
	xxx_messageInfo_Duration.Merge(m, src)
}
func (m *Duration) XXX_Size() int {
	return xxx_messageInfo_Duration.Size(m)
}
func (m *Duration) XXX_DiscardUnknown() {
	xxx_messageInfo_Duration.DiscardUnknown(m)
}

var xxx_messageInfo_Duration proto.InternalMessageInfo

func (m *Duration) GetMillis() int32 {
	if m != nil {
		return m.Millis
	}
	return 0
}

func init() {
	proto.RegisterType((*Duration)(nil), "michilu.boilerplate.domain.Duration")
}

func init() { proto.RegisterFile("domain/message.proto", fileDescriptor_2069d9285dea32c5) }

var fileDescriptor_2069d9285dea32c5 = []byte{
	// 181 bytes of a gzipped FileDescriptorProto
	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x12, 0x49, 0xc9, 0xcf, 0x4d,
	0xcc, 0xcc, 0xd3, 0xcf, 0x4d, 0x2d, 0x2e, 0x4e, 0x4c, 0x4f, 0xd5, 0x2b, 0x28, 0xca, 0x2f, 0xc9,
	0x17, 0x92, 0xca, 0xcd, 0x4c, 0xce, 0xc8, 0xcc, 0x29, 0xd5, 0x4b, 0xca, 0xcf, 0xcc, 0x49, 0x2d,
	0x2a, 0xc8, 0x49, 0x2c, 0x49, 0xd5, 0x83, 0xa8, 0x94, 0x32, 0x4b, 0xcf, 0x2c, 0xc9, 0x28, 0x4d,
	0xd2, 0x4b, 0xce, 0xcf, 0xd5, 0xcf, 0x2d, 0xcf, 0x2c, 0xc9, 0xce, 0x2f, 0xd7, 0x4f, 0xcf, 0xd7,
	0x05, 0x6b, 0xd4, 0x2d, 0x4b, 0xcc, 0xc9, 0x4c, 0x49, 0x2c, 0xc9, 0x2f, 0x2a, 0xd6, 0x87, 0x33,
	0x21, 0x66, 0x2a, 0x69, 0x71, 0x71, 0xb8, 0x94, 0x16, 0x25, 0x96, 0x64, 0xe6, 0xe7, 0x09, 0xc9,
	0x71, 0xb1, 0xe5, 0x66, 0xe6, 0xe4, 0x64, 0x16, 0x4b, 0x30, 0x2a, 0x30, 0x6a, 0xb0, 0x3a, 0xb1,
	0x3d, 0xba, 0x2f, 0xcf, 0x24, 0xc0, 0x10, 0x04, 0x15, 0x75, 0xb2, 0xe0, 0x92, 0x4b, 0xce, 0xcf,
	0xd5, 0xc3, 0xed, 0x0a, 0x27, 0x1e, 0x5f, 0x88, 0x83, 0x03, 0x40, 0x66, 0x07, 0x30, 0x46, 0xb1,
	0x41, 0xc4, 0x93, 0xd8, 0xc0, 0x96, 0x19, 0x03, 0x02, 0x00, 0x00, 0xff, 0xff, 0x21, 0xc0, 0x8e,
	0x42, 0xd8, 0x00, 0x00, 0x00,
}
